Update to JDK 17 & Springboot 3
Change-Id: I616592873e5cd270c2d7ba5a031ac6089e7896cb
Signed-off-by: JohnKeeney <john.keeney@est.tech>
Issue-ID: NONRTRIC-841